@@ -30,9 +30,10 @@ NumberFormats() : NFexports == NFimplementation where
             ++ the string s ignoring any spaces. Error is generated if the
             ++ string is not recognised as a floating point number.
         ScanFloatIgnoreSpacesIfCan : S -> Union(F, "failed")
-            ++ ScanFloatIgnoreSpacesIfCan(s) tries to form a floating point number from
-            ++ the string s ignoring any spaces.
-
+            ++ ScanFloatIgnoreSpacesIfCan(s) tries to form a floating point
+            ++ number from the string s ignoring any spaces.
+        FormatRadix : (I, I) -> S
+            ++ FormatRadix(n, r) forms a string from an integer n in radix r.
 
     NFimplementation ==> add
         import from SExpression
@@ -183,6 +184,8 @@ NumberFormats() : NFexports == NFimplementation where
             tot <= 0 => error concat("Improper Roman numeral: ",
                                      convert(tot)@String)
             tot::PI
+
+        FormatRadix(n, r) == write_to_string_radix(n, r)$Lisp
 
 )abbrev domain OUTFORM OutputForm
 ++ Keywords: output, I/O, expression
