@@ -1,3 +1,11 @@
+2018-03-05  Qian Yun  <oldk1331@gmail.com>
+
+	* src/algebra/texmacs.spad, src/algebra/outform.spad,
+	src/lisp/fricas-lisp.lisp,
+	contrib/texmacs/fricas/progs/fricas-input.scm,
+	contrib/texmacs/fricas/doc/FriCAS-TeXmacs-characters.tm:
+	Improve Texmacs interface
+
 2018-02-27  Qian Yun  <oldk1331@gmail.com>
 
 	* src/algebra/combfunc.spad: Remove unsound power
